<resources>
    <string name="app_name">SubbutApp</string>
    <string name="navigation_drawer_item1">Campionato</string>
    <string name="navigation_drawer_item2">Champions League</string>
    <string name="navigation_drawer_item3">Coppa Italia</string>
    <string name="navigation_drawer_item4">Supercoppa</string>
    <string name="navigation_drawer_item5">Archivio</string>
    <string name="navigation_drawer_item6">Regolamento</string>
    <string name="navigation_drawer_item7">Costituzione</string>
    <string name="sub_navigation_item1">Vecchi campionati</string>
    <string name="sub_navigation_item2">Vecchie champions league</string>
    <string name="sub_navigation_item3">Vecchie coppe italia</string>
    <string name="sub_navigation_item4">Vecchie supercoppe</string>
    <string name="drawer_open">Tab a scomparsa aperta</string>
    <string name="drawer_closed">Tab a scomparsa chiusa</string>
    <string name="matches">Giornata</string>
    <string name="championship_tag">CHAMPIONSHIP</string>
    <string name="cup_tag">CUP</string>
    <string name="league_tag">LEAGUE</string>
    <string name="supercoppa_tag">SUPERCOPPA</string>
    <string name="match_type_tag">MATCH_TYPE</string>
    <string name="day_num_tag">DAY_NUM</string>
    <string name="day_date_tag">DATE</string>
    <string name="matches_tag">MATCHES</string>
    <string name="left_player_tag">PL1</string>
    <string name="left_res_tag">RES1</string>
    <string name="left_res_second_tag">RES3</string>
    <string name="right_player_tag">PL2</string>
    <string name="right_res_tag">RES2</string>
    <string name="right_res_second_tag">RES4</string>
    <string name="rest_player_tag">REST</string>
    <string name="live1_tag">LIVE1</string>
    <string name="live2_tag">LIVE2</string>
    <string name="details_tag">DETAILS</string>
    <string name="first_or_second_tag">FIRST_OR_SECOND</string>
    <string name="goals_tag">GOALS</string>
    <string name="cards_tag">CARDS</string>
    <string name="inout_tag">IN_OUT</string>
    <string name="min_tag">MIN</string>
    <string name="player_tag">PLAYER</string>
    <string name="type_tag">TYPE</string>
    <string name="img_tag">IMG</string>
    <string name="wins_tag">WINS</string>
    <string name="bundle_tab">DayNum</string>
    <string name="rest_str">Riposa:</string>
    <string name="bundle_details_tag">matchInfo</string>
    <string name="bundle_single_match_tag">singleMatch</string>
    <string name="bundle_competition_type_tag">competitionType</string>
    <string name="bundle_supercoppa_tag">supercoppa</string>
    <string name="halloffame_ranking_title">ALBO D\'ORO</string>
    <string name="scored_ranking_title">MIGLIOR ATTACCO</string>
    <string name="defense_ranking_title">MIGLIOR DIFESA</string>
    <string name="ranking_title">CLASSIFICA</string>
    <string name="ranking_player">GIOCATORE</string>
    <string name="ranking_points">P</string>
    <string name="ranking_num_matches">G</string>
    <string name="ranking_wins">V</string>
    <string name="ranking_draws">N</string>
    <string name="ranking_defeats">P</string>
    <string name="ranking_scored_goals">GF</string>
    <string name="ranking_conceded_goals">GS</string>
    <string name="quarters">QUARTI</string>
    <string name="semifinals">SEMIFINALI</string>
    <string name="first_final">FINALE</string>
    <string name="second_final">FINALE_2</string>
    <string name="second_final_text">FINALE 3 POSTO</string>
    <string name="bundle_layout">layoutToSet</string>
    <string name="constitution">
        <b>COSTITUZIONE DELL\'ASSOCIAZIONE ITALIANA E INTERNAZIONALE SUBBUTEA BIANCHI</b>\n
        Costituzione approvata il 28/06/2020\n
        \n
        <b>Art.1</b>\n
        L\'associazione italiana e internazionale subbutea Bianchi tutela i diritti di tutti i suoi soci, ed ha come scopo principale
        il gioco e la diffusione del giuoco Subbuteo. Questa associazione farà tutte quante le proprie cose alla luce del sole: essa non
        lavora con il favore delle tenebre.\n
        \n
        <b>Art.2</b>\n
        L\'associazione promuove e finanzia quattro competizioni subbutee: Campionato italiano di Serie A, Coppa Italia Subbuteo, Champions
        League Subbuteo, Supercoppa italiana del Subbuteo.\n
        \n
        <b>Art.3</b>\n
        L\'associazione prevede quindi una costituzione, un regolamento per le competizioni sopra elencate, e, infine, un presidente, che
        verrà eletto ogni due anni, un segretario, che verrà eletto ogni anno, e un grafico.\n
        \n
        <b>Art.4</b>\n
        L\'associazione si riunirà annualmentead inizio giugno per discuter delle modifiche al regolamento, per i sorteggi della stagione
        successiva e per eventuali elezioni. Ogni assemblea ordinaria verrà annunciata da un manifesto che annuncerà la data e gli
        argomenti e da delle lettere che verranno inviate ai soci.\n
        \n
        <b>Art.5</b>\n
        Il presidente potrà bandire assemblee straordinarie se verranno fatti eventuali ricorsi al regolamento dopo le modifiche ad inizio
        giugno, oppure se si dovranno discutere alcuni argomenti che si solleveranno dentro l\'associazione. La formula di promulgazione
        di una assemblea ordinaria verrà utilizzata anche per le assemblee straordinarie.\n
        \n
        <b>Art.6</b>\n
        Tutti i soci hanno pari diritti, ma doveri diversi a seconda del ruolo:\n
        <b>COMMA 1:</b> I soci hanno il dovere di presenziare ad ogni assemblea, di esprimere sempre la propria opinione e il proprio voto,
        e infine di dare un proprio giudizio sulle regole ricorrendo al ricorso.\n
        <b>COMMA 2:</b> Il grafico ha gli stessi doveri del socio semplice. Viene aggiunto però che egli dovrà occuparsi anche dell\'App.
        Subbuteo.\n
        <b>COMMA 3:</b> Il segretario ha gli stessi doveri del socio semplice. Viene aggiunto però che: dovrà spartirsi i compiti di organizzazione
        con il presidente; dovrà mettere a verbale tutte le cose che accadono durante le assemblee.\n
        <b>COMMA 4:</b> Il presidente ha gli stessi doveri del socio semplice. Viene aggiunto però che: dovrà spartirsi i compiti di
        organizzazione con il segretario; dovrà presiedere ogni assemblea.\n
        \n
        <b>Art.7</b>\n
        Qui di seguito viene riportato il contratto tra presidente e segretario:\n
        <b>COMMA 1:</b> Io, il signor presidente, mi impegno a rispettare tutti i soci, in particolare il signore segretario, con il quale
        condividerò i lavori di organizzazione. Tutti i suoi lavori dovranno avere la mia conferma e approvazione, mentre i miei dovranno
        avere sempre la sua firma. I lavori saranno equamente distribuiti.\n
        <b>COMMA 2:</b> Io, il signore segretario, mi impegno a rispettare tutti i soci, in particolare il signor presidente, con il quale
        condividerò i lavori di organizzazione. Tutti i miei lavori dovranno avere la sua conferma, mentre io dovrò mettere una firma su
        tutti i suoi lavori.\n
    </string>
</resources>